// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Field /> with <Field.Autocomplete /> matches with snapshot 1`] = `
Array [
  <div
    className="k-Field__label k-u-margin-bottom-single"
  >
    <div
      className="sc-hKMtZM iSZeOx k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="sc-bczRLJ dplUdj k-Label k-Label--small"
          htmlFor="autocomplete"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
    </div>
  </div>,
  <div
    className="k-u-margin-top-single k-Field__control"
  >
    <div
      className="sc-iqcoie fOoKFn k-Form-Autocomplete"
    >
      <div
        className="sc-jSMfEi gocctE k-TextInput__wrapper k-TextInput__wrapper--medium"
      >
        <input
          aria-activedescendant=""
          aria-autocomplete="both"
          aria-expanded={null}
          aria-owns="field-results"
          autoComplete="off"
          className="k-TextInput k-Form-Autocomplete__input"
          disabled={false}
          id="autocomplete"
          name="field"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          placeholder="Select…"
          role="combobox"
          type="text"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`<Field /> with <Field.Input /> and custom Field tag matches with snapshot 1`] = `
<div>
  <div
    className="k-Field__label k-u-margin-bottom-single"
  >
    <div
      className="sc-hKMtZM iSZeOx k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="sc-bczRLJ dplUdj k-Label k-Label--small"
          htmlFor="input"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
      <div
        className="k-Line__item"
      >
        <span
          className="sc-dkzDqf cEsrCh k-Toggletip k-Toggletip--action k-Toggletip--info"
          id="tooltip"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "--toggletipAction-height": undefined,
              "--toggletipAction-left": undefined,
              "--toggletipAction-top": undefined,
            }
          }
        >
          <button
            aria-label="Learn more"
            className="k-u-reset-button k-Toggletip__action"
            onBlur={[Function]}
            onClick={[Function]}
            style={
              Object {
                "--toggletipAction-color": null,
              }
            }
            type="button"
          >
            <span
              className="sc-gsnTZi gyAcxJ k-IconBadge k-Toggletip__icon k-IconBadge--small k-IconBadge--info k-IconBadge--hasBorder"
              style={
                Object {
                  "--iconBadge-background-color": null,
                  "--iconBadge-border-color": null,
                  "--iconBadge-border-style": null,
                  "--iconBadge-border-width": null,
                }
              }
            >
              <svg
                fill="var(--color-grey-900)"
                height="14"
                viewBox="0 0 4 14"
                width="4"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2"
                  cy="1.25"
                  r="1.25"
                  transform="rotate(-180 2 1.25)"
                />
                <rect
                  height="9"
                  rx="1.25"
                  transform="rotate(-180 3.25 13.5)"
                  width="2.5"
                  x="3.25"
                  y="13.5"
                />
              </svg>
            </span>
          </button>
          <span
            role={null}
          />
        </span>
      </div>
    </div>
  </div>
  <div
    className="sc-jSMfEi gocctE k-TextInput__wrapper k-TextInput__wrapper--medium k-FieldInput k-Field__control k-u-margin-top-single"
  >
    <input
      className="k-TextInput k-TextInput--error"
      disabled={false}
      id="input"
      name="field"
      onChange={[Function]}
      placeholder="Placeholder…"
    />
  </div>
  <p
    className="k-u-color-error k-u-line-height-normal k-u-size-micro k-u-weight-500 k-Field__error k-u-margin-none k-u-margin-top-single"
  >
    Very Bad! Error message
  </p>
  <p
    className="k-u-line-height-normal k-u-size-micro k-u-weight-400 k-Field__help k-u-margin-none k-u-margin-top-single"
    style={
      Object {
        "color": "var(--color-grey-700)",
      }
    }
  >
    Help message
  </p>
</div>
`;

exports[`<Field /> with <Field.Input /> in error matches with snapshot 1`] = `
Array [
  <div
    className="k-Field__label k-u-margin-bottom-single"
  >
    <div
      className="sc-hKMtZM iSZeOx k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="sc-bczRLJ dplUdj k-Label k-Label--small"
          htmlFor="input"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
      <div
        className="k-Line__item"
      >
        <span
          className="sc-dkzDqf cEsrCh k-Toggletip k-Toggletip--action k-Toggletip--info"
          id="tooltip"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "--toggletipAction-height": undefined,
              "--toggletipAction-left": undefined,
              "--toggletipAction-top": undefined,
            }
          }
        >
          <button
            aria-label="Learn more"
            className="k-u-reset-button k-Toggletip__action"
            onBlur={[Function]}
            onClick={[Function]}
            style={
              Object {
                "--toggletipAction-color": null,
              }
            }
            type="button"
          >
            <span
              className="sc-gsnTZi gyAcxJ k-IconBadge k-Toggletip__icon k-IconBadge--small k-IconBadge--info k-IconBadge--hasBorder"
              style={
                Object {
                  "--iconBadge-background-color": null,
                  "--iconBadge-border-color": null,
                  "--iconBadge-border-style": null,
                  "--iconBadge-border-width": null,
                }
              }
            >
              <svg
                fill="var(--color-grey-900)"
                height="14"
                viewBox="0 0 4 14"
                width="4"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2"
                  cy="1.25"
                  r="1.25"
                  transform="rotate(-180 2 1.25)"
                />
                <rect
                  height="9"
                  rx="1.25"
                  transform="rotate(-180 3.25 13.5)"
                  width="2.5"
                  x="3.25"
                  y="13.5"
                />
              </svg>
            </span>
          </button>
          <span
            role={null}
          />
        </span>
      </div>
    </div>
  </div>,
  <div
    className="sc-jSMfEi gocctE k-TextInput__wrapper k-TextInput__wrapper--medium k-FieldInput k-Field__control k-u-margin-top-single"
  >
    <input
      className="k-TextInput k-TextInput--error"
      disabled={false}
      id="input"
      name="field"
      onChange={[Function]}
      placeholder="Placeholder…"
    />
  </div>,
  <p
    className="k-u-color-error k-u-line-height-normal k-u-size-micro k-u-weight-500 k-Field__error k-u-margin-none k-u-margin-top-single"
  >
    Error!
  </p>,
]
`;

exports[`<Field /> with <Field.Input /> in help matches with snapshot 1`] = `
Array [
  <div
    className="k-Field__label k-u-margin-bottom-single"
  >
    <div
      className="sc-hKMtZM iSZeOx k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="sc-bczRLJ dplUdj k-Label k-Label--small"
          htmlFor="input"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
      <div
        className="k-Line__item"
      >
        <span
          className="sc-dkzDqf cEsrCh k-Toggletip k-Toggletip--action k-Toggletip--info"
          id="tooltip"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "--toggletipAction-height": undefined,
              "--toggletipAction-left": undefined,
              "--toggletipAction-top": undefined,
            }
          }
        >
          <button
            aria-label="Learn more"
            className="k-u-reset-button k-Toggletip__action"
            onBlur={[Function]}
            onClick={[Function]}
            style={
              Object {
                "--toggletipAction-color": null,
              }
            }
            type="button"
          >
            <span
              className="sc-gsnTZi gyAcxJ k-IconBadge k-Toggletip__icon k-IconBadge--small k-IconBadge--info k-IconBadge--hasBorder"
              style={
                Object {
                  "--iconBadge-background-color": null,
                  "--iconBadge-border-color": null,
                  "--iconBadge-border-style": null,
                  "--iconBadge-border-width": null,
                }
              }
            >
              <svg
                fill="var(--color-grey-900)"
                height="14"
                viewBox="0 0 4 14"
                width="4"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2"
                  cy="1.25"
                  r="1.25"
                  transform="rotate(-180 2 1.25)"
                />
                <rect
                  height="9"
                  rx="1.25"
                  transform="rotate(-180 3.25 13.5)"
                  width="2.5"
                  x="3.25"
                  y="13.5"
                />
              </svg>
            </span>
          </button>
          <span
            role={null}
          />
        </span>
      </div>
    </div>
  </div>,
  <div
    className="sc-jSMfEi gocctE k-TextInput__wrapper k-TextInput__wrapper--medium k-FieldInput k-Field__control k-u-margin-top-single"
  >
    <input
      className="k-TextInput"
      disabled={false}
      id="input"
      name="field"
      onChange={[Function]}
      placeholder="Placeholder…"
    />
  </div>,
  <p
    className="k-u-line-height-normal k-u-size-micro k-u-weight-400 k-Field__help k-u-margin-none k-u-margin-top-single"
    style={
      Object {
        "color": "var(--color-grey-700)",
      }
    }
  >
    Help!
  </p>,
]
`;

exports[`<Field /> with <Field.Input /> matches with snapshot 1`] = `
Array [
  <div
    className="k-Field__label k-u-margin-bottom-single"
  >
    <div
      className="sc-hKMtZM iSZeOx k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="sc-bczRLJ dplUdj k-Label k-Label--small"
          htmlFor="input"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
      <div
        className="k-Line__item"
      >
        <span
          className="sc-dkzDqf cEsrCh k-Toggletip k-Toggletip--action k-Toggletip--info"
          id="tooltip"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "--toggletipAction-height": undefined,
              "--toggletipAction-left": undefined,
              "--toggletipAction-top": undefined,
            }
          }
        >
          <button
            aria-label="Learn more"
            className="k-u-reset-button k-Toggletip__action"
            onBlur={[Function]}
            onClick={[Function]}
            style={
              Object {
                "--toggletipAction-color": null,
              }
            }
            type="button"
          >
            <span
              className="sc-gsnTZi gyAcxJ k-IconBadge k-Toggletip__icon k-IconBadge--small k-IconBadge--info k-IconBadge--hasBorder"
              style={
                Object {
                  "--iconBadge-background-color": null,
                  "--iconBadge-border-color": null,
                  "--iconBadge-border-style": null,
                  "--iconBadge-border-width": null,
                }
              }
            >
              <svg
                fill="var(--color-grey-900)"
                height="14"
                viewBox="0 0 4 14"
                width="4"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2"
                  cy="1.25"
                  r="1.25"
                  transform="rotate(-180 2 1.25)"
                />
                <rect
                  height="9"
                  rx="1.25"
                  transform="rotate(-180 3.25 13.5)"
                  width="2.5"
                  x="3.25"
                  y="13.5"
                />
              </svg>
            </span>
          </button>
          <span
            role={null}
          />
        </span>
      </div>
    </div>
  </div>,
  <div
    className="sc-jSMfEi gocctE k-TextInput__wrapper k-TextInput__wrapper--medium k-FieldInput k-Field__control k-u-margin-top-single"
  >
    <input
      className="k-TextInput"
      disabled={false}
      id="input"
      name="field"
      onChange={[Function]}
      placeholder="Placeholder…"
    />
  </div>,
]
`;

exports[`<Field /> with <Field.Input limit /> matches with snapshot 1`] = `
Array [
  <div
    className="k-Field__label k-u-margin-bottom-single"
  >
    <div
      className="sc-hKMtZM iSZeOx k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="sc-bczRLJ dplUdj k-Label k-Label--small"
          htmlFor="input"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
      <div
        className="k-Line__item"
      >
        <span
          className="sc-dkzDqf cEsrCh k-Toggletip k-Toggletip--action k-Toggletip--info"
          id="tooltip"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "--toggletipAction-height": undefined,
              "--toggletipAction-left": undefined,
              "--toggletipAction-top": undefined,
            }
          }
        >
          <button
            aria-label="Learn more"
            className="k-u-reset-button k-Toggletip__action"
            onBlur={[Function]}
            onClick={[Function]}
            style={
              Object {
                "--toggletipAction-color": null,
              }
            }
            type="button"
          >
            <span
              className="sc-gsnTZi gyAcxJ k-IconBadge k-Toggletip__icon k-IconBadge--small k-IconBadge--info k-IconBadge--hasBorder"
              style={
                Object {
                  "--iconBadge-background-color": null,
                  "--iconBadge-border-color": null,
                  "--iconBadge-border-style": null,
                  "--iconBadge-border-width": null,
                }
              }
            >
              <svg
                fill="var(--color-grey-900)"
                height="14"
                viewBox="0 0 4 14"
                width="4"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2"
                  cy="1.25"
                  r="1.25"
                  transform="rotate(-180 2 1.25)"
                />
                <rect
                  height="9"
                  rx="1.25"
                  transform="rotate(-180 3.25 13.5)"
                  width="2.5"
                  x="3.25"
                  y="13.5"
                />
              </svg>
            </span>
          </button>
          <span
            role={null}
          />
        </span>
      </div>
    </div>
  </div>,
  <div
    className="sc-jSMfEi gocctE k-TextInput__wrapper k-TextInput__wrapper--medium k-FieldInput k-Field__control k-u-margin-top-single"
  >
    <input
      className="k-TextInput k-TextInput--hasLimit"
      disabled={false}
      id="input"
      name="field"
      onChange={[Function]}
      placeholder="Placeholder…"
    />
    <div
      className="k-TextInput__limitNumber"
    >
      80
    </div>
  </div>,
]
`;

exports[`<Field /> with <Field.Input unit /> matches with snapshot 1`] = `
Array [
  <div
    className="k-Field__label k-u-margin-bottom-single"
  >
    <div
      className="sc-hKMtZM iSZeOx k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="sc-bczRLJ dplUdj k-Label k-Label--small"
          htmlFor="input"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
      <div
        className="k-Line__item"
      >
        <span
          className="sc-dkzDqf cEsrCh k-Toggletip k-Toggletip--action k-Toggletip--info"
          id="tooltip"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "--toggletipAction-height": undefined,
              "--toggletipAction-left": undefined,
              "--toggletipAction-top": undefined,
            }
          }
        >
          <button
            aria-label="Learn more"
            className="k-u-reset-button k-Toggletip__action"
            onBlur={[Function]}
            onClick={[Function]}
            style={
              Object {
                "--toggletipAction-color": null,
              }
            }
            type="button"
          >
            <span
              className="sc-gsnTZi gyAcxJ k-IconBadge k-Toggletip__icon k-IconBadge--small k-IconBadge--info k-IconBadge--hasBorder"
              style={
                Object {
                  "--iconBadge-background-color": null,
                  "--iconBadge-border-color": null,
                  "--iconBadge-border-style": null,
                  "--iconBadge-border-width": null,
                }
              }
            >
              <svg
                fill="var(--color-grey-900)"
                height="14"
                viewBox="0 0 4 14"
                width="4"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2"
                  cy="1.25"
                  r="1.25"
                  transform="rotate(-180 2 1.25)"
                />
                <rect
                  height="9"
                  rx="1.25"
                  transform="rotate(-180 3.25 13.5)"
                  width="2.5"
                  x="3.25"
                  y="13.5"
                />
              </svg>
            </span>
          </button>
          <span
            role={null}
          />
        </span>
      </div>
    </div>
  </div>,
  <div
    className="sc-jSMfEi gocctE k-TextInput__wrapper k-TextInput__wrapper--medium k-FieldInput k-Field__control k-u-margin-top-single k-TextInput__wrapper--hasUnit"
  >
    <input
      className="k-TextInput k-TextInput--hasUnit"
      disabled={false}
      id="input"
      name="field"
      onChange={[Function]}
      placeholder="Placeholder…"
    />
    <span
      className="k-TextInput__unit"
    >
      €
    </span>
  </div>,
]
`;

exports[`<Field /> with <Field.Password /> in error matches with snapshot 1`] = `
Array [
  <div
    className="k-Field__label k-u-margin-bottom-single"
  >
    <div
      className="sc-hKMtZM iSZeOx k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="sc-bczRLJ dplUdj k-Label k-Label--small"
          htmlFor="input"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
      <div
        className="k-Line__item"
      >
        <span
          className="sc-dkzDqf cEsrCh k-Toggletip k-Toggletip--action k-Toggletip--info"
          id="tooltip"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "--toggletipAction-height": undefined,
              "--toggletipAction-left": undefined,
              "--toggletipAction-top": undefined,
            }
          }
        >
          <button
            aria-label="Learn more"
            className="k-u-reset-button k-Toggletip__action"
            onBlur={[Function]}
            onClick={[Function]}
            style={
              Object {
                "--toggletipAction-color": null,
              }
            }
            type="button"
          >
            <span
              className="sc-gsnTZi gyAcxJ k-IconBadge k-Toggletip__icon k-IconBadge--small k-IconBadge--info k-IconBadge--hasBorder"
              style={
                Object {
                  "--iconBadge-background-color": null,
                  "--iconBadge-border-color": null,
                  "--iconBadge-border-style": null,
                  "--iconBadge-border-width": null,
                }
              }
            >
              <svg
                fill="var(--color-grey-900)"
                height="14"
                viewBox="0 0 4 14"
                width="4"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2"
                  cy="1.25"
                  r="1.25"
                  transform="rotate(-180 2 1.25)"
                />
                <rect
                  height="9"
                  rx="1.25"
                  transform="rotate(-180 3.25 13.5)"
                  width="2.5"
                  x="3.25"
                  y="13.5"
                />
              </svg>
            </span>
          </button>
          <span
            role={null}
          />
        </span>
      </div>
    </div>
  </div>,
  <div
    className="k-u-margin-top-single k-Field__control"
  >
    <div
      className="sc-jSMfEi gocctE k-TextInput__wrapper k-TextInput__wrapper--medium k-TextInput__wrapper--button_inset"
    >
      <input
        className="k-TextInput k-TextInput--hasButton k-TextInput--error"
        disabled={false}
        id="input"
        name="field"
        onChange={[Function]}
        placeholder="Placeholder…"
        type="password"
      />
      <button
        aria-label="Show password"
        aria-pressed={false}
        className="k-TextInput__button k-PasswordInput__icon"
        onClick={[Function]}
        rounded={false}
        size="medium"
        type="button"
      >
        <svg
          fill="var(--color-grey-900)"
          viewBox="0 0 18 12"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M9 0C4 0 0 4 0 6s4 6 9 6 9-4 9-6-4-6-9-6zm0 10c-2.2 0-4-1.8-4-4s1.8-4 4-4 4 1.8 4 4-1.8 4-4 4z"
          />
          <circle
            cx="9"
            cy="6"
            r="2"
          />
        </svg>
      </button>
    </div>
  </div>,
  <p
    className="k-u-color-error k-u-line-height-normal k-u-size-micro k-u-weight-500 k-Field__error k-u-margin-none k-u-margin-top-single"
  >
    Error!
  </p>,
]
`;

exports[`<Field /> with <Field.Password /> matches with snapshot 1`] = `
Array [
  <div
    className="k-Field__label k-u-margin-bottom-single"
  >
    <div
      className="sc-hKMtZM iSZeOx k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="sc-bczRLJ dplUdj k-Label k-Label--small"
          htmlFor="input"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
      <div
        className="k-Line__item"
      >
        <span
          className="sc-dkzDqf cEsrCh k-Toggletip k-Toggletip--action k-Toggletip--info"
          id="tooltip"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "--toggletipAction-height": undefined,
              "--toggletipAction-left": undefined,
              "--toggletipAction-top": undefined,
            }
          }
        >
          <button
            aria-label="Learn more"
            className="k-u-reset-button k-Toggletip__action"
            onBlur={[Function]}
            onClick={[Function]}
            style={
              Object {
                "--toggletipAction-color": null,
              }
            }
            type="button"
          >
            <span
              className="sc-gsnTZi gyAcxJ k-IconBadge k-Toggletip__icon k-IconBadge--small k-IconBadge--info k-IconBadge--hasBorder"
              style={
                Object {
                  "--iconBadge-background-color": null,
                  "--iconBadge-border-color": null,
                  "--iconBadge-border-style": null,
                  "--iconBadge-border-width": null,
                }
              }
            >
              <svg
                fill="var(--color-grey-900)"
                height="14"
                viewBox="0 0 4 14"
                width="4"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2"
                  cy="1.25"
                  r="1.25"
                  transform="rotate(-180 2 1.25)"
                />
                <rect
                  height="9"
                  rx="1.25"
                  transform="rotate(-180 3.25 13.5)"
                  width="2.5"
                  x="3.25"
                  y="13.5"
                />
              </svg>
            </span>
          </button>
          <span
            role={null}
          />
        </span>
      </div>
    </div>
  </div>,
  <div
    className="k-u-margin-top-single k-Field__control"
  >
    <div
      className="sc-jSMfEi gocctE k-TextInput__wrapper k-TextInput__wrapper--medium k-TextInput__wrapper--button_inset"
    >
      <input
        className="k-TextInput k-TextInput--hasButton"
        disabled={false}
        id="input"
        name="field"
        onChange={[Function]}
        placeholder="Placeholder…"
        type="password"
      />
      <button
        aria-label="Show password"
        aria-pressed={false}
        className="k-TextInput__button k-PasswordInput__icon"
        onClick={[Function]}
        rounded={false}
        size="medium"
        type="button"
      >
        <svg
          fill="var(--color-grey-900)"
          viewBox="0 0 18 12"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M9 0C4 0 0 4 0 6s4 6 9 6 9-4 9-6-4-6-9-6zm0 10c-2.2 0-4-1.8-4-4s1.8-4 4-4 4 1.8 4 4-1.8 4-4 4z"
          />
          <circle
            cx="9"
            cy="6"
            r="2"
          />
        </svg>
      </button>
    </div>
  </div>,
]
`;

exports[`<Field /> with <Field.RadioButtonSet /> matches with snapshot 1`] = `
Array [
  <div
    className="k-Field__label k-u-margin-bottom-single"
  >
    <div
      className="sc-hKMtZM iSZeOx k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="sc-bczRLJ dplUdj k-Label k-Label--small"
          htmlFor="option-a"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
    </div>
  </div>,
  <div
    className="k-u-margin-top-single k-Field__control"
  >
    <fieldset
      className="sc-papXJ iJntvi k-Form-RadioButtonSet"
      disabled={false}
    >
      <div
        className="k-Form-RadioButtonSet__radioContainer"
      >
        <div
          className="sc-ftvSup kJVWKH k-Form-RadioButton k-Form-RadioButtonSet__radioButton k-Form-RadioButton--disc k-Form-RadioButton--medium k-Form-RadioButton--weight-500"
        >
          <input
            className="k-Form-RadioButton__input"
            defaultChecked={true}
            disabled={false}
            id="option-a"
            name="radio"
            type="radio"
          />
          <label
            className="k-Form-RadioButton__label"
            htmlFor="option-a"
          >
            <span
              className="k-Form-RadioButton__labelText"
            >
              Option A
            </span>
          </label>
        </div>
        <div
          className="sc-ftvSup kJVWKH k-Form-RadioButton k-Form-RadioButtonSet__radioButton k-Form-RadioButton--disc k-Form-RadioButton--medium k-Form-RadioButton--weight-500"
        >
          <input
            className="k-Form-RadioButton__input"
            disabled={false}
            id="option-b"
            name="radio"
            type="radio"
          />
          <label
            className="k-Form-RadioButton__label"
            htmlFor="option-b"
          >
            <span
              className="k-Form-RadioButton__labelText"
            >
              Option B
            </span>
          </label>
        </div>
        <div
          className="sc-ftvSup kJVWKH k-Form-RadioButton k-Form-RadioButtonSet__radioButton k-Form-RadioButton--disc k-Form-RadioButton--medium k-Form-RadioButton--weight-500"
        >
          <input
            className="k-Form-RadioButton__input"
            disabled={false}
            id="option-c"
            name="radio"
            type="radio"
          />
          <label
            className="k-Form-RadioButton__label"
            htmlFor="option-c"
          >
            <span
              className="k-Form-RadioButton__labelText"
            >
              Option C
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </div>,
]
`;

exports[`<Field /> with <Field.RadioSet /> matches with snapshot 1`] = `
Array [
  <div
    className="k-Field__label k-u-margin-bottom-single"
  >
    <div
      className="sc-hKMtZM iSZeOx k-Line"
      style={
        Object {
          "lineHeight": 1,
        }
      }
    >
      <div
        className="k-Line__item"
      >
        <label
          className="sc-bczRLJ dplUdj k-Label k-Label--small"
          htmlFor="option-a"
          onClick={[Function]}
        >
          Label
        </label>
      </div>
    </div>
  </div>,
  <div
    className="k-u-margin-top-single k-Field__control"
  >
    <fieldset
      className="sc-iBkjds fSxEIX k-Form-RadioSet"
      disabled={false}
    >
      <div
        className="k-Form-RadioSet__radioContainer"
      >
        <div
          className="sc-gKXOVf jjxmrr k-Form-Radio k-Form-RadioSet__radio k-Form-Radio--disc"
        >
          <input
            className="k-Form-Radio__input"
            defaultChecked={true}
            disabled={false}
            id="option-a"
            name="radio"
            type="radio"
          />
          <label
            className="k-Form-Radio__label"
            htmlFor="option-a"
          >
            <span
              className="k-Form-Radio__labelText k-Form-Radio__labelText--500"
            >
              Option A
            </span>
          </label>
        </div>
        <div
          className="sc-gKXOVf jjxmrr k-Form-Radio k-Form-RadioSet__radio k-Form-Radio--disc"
        >
          <input
            className="k-Form-Radio__input"
            disabled={false}
            id="option-b"
            name="radio"
            type="radio"
          />
          <label
            className="k-Form-Radio__label"
            htmlFor="option-b"
          >
            <span
              className="k-Form-Radio__labelText k-Form-Radio__labelText--500"
            >
              Option B
            </span>
          </label>
        </div>
        <div
          className="sc-gKXOVf jjxmrr k-Form-Radio k-Form-RadioSet__radio k-Form-Radio--disc"
        >
          <input
            className="k-Form-Radio__input"
            disabled={false}
            id="option-c"
            name="radio"
            type="radio"
          />
          <label
            className="k-Form-Radio__label"
            htmlFor="option-c"
          >
            <span
              className="k-Form-Radio__labelText k-Form-Radio__labelText--500"
            >
              Option C
            </span>
          </label>
        </div>
      </div>
    </fieldset>
  </div>,
]
`;
